--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,27 +2,29 @@
   "compilerOptions": {
     "target": "ES2022",
     "lib": ["ES2023", "DOM", "DOM.Iterable"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "strict": true,
-    "noEmit": true,
-    "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
+
+    "jsx": "preserve",
+    "allowJs": false,
+    "strict": true,
+    "noEmit": true,
+    "skipLibCheck": true,
+
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+
     "baseUrl": ".",
     "paths": { "@/*": ["./*"] },
+
     "incremental": true,
+    "forceConsistentCasingInFileNames": true,
     "plugins": [{ "name": "next" }],
-    "forceConsistentCasingInFileNames": true
+
+    /* Carrega apenas estes pacotes de tipos (bloqueia tipos estranhos) */
+    "types": ["next", "react", "react-dom", "node"]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
