--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,25 +4,21 @@
     "lib": ["ES2023", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
-
     "jsx": "preserve",
     "allowJs": false,
     "strict": true,
     "noEmit": true,
     "skipLibCheck": true,
-
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-
     "baseUrl": ".",
     "paths": { "@/*": ["./*"] },
-
     "incremental": true,
     "forceConsistentCasingInFileNames": true,
     "plugins": [{ "name": "next" }],
-
-    "types": ["next", "react", "react-dom", "node"]
+    "types": ["next", "react", "react-dom", "node"],
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
